@@ -6,6 +6,8 @@
 	* src/RInside.cpp: Update RNG seeding to same scheme now used by
 	R which blends both (millisecond) time and process id
 
+	* src/RInside.cpp: Replace fprintf(stderr,...) with Rf_error(...)
+	
 	* inst/examples/*: Added CMake build support for all example
 	directories kindly provided by Peter Aberline; this helps when coding
 	inside of IDEs such as Eclipse, KDevelop or Code::Blocks
